--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/murilopolese/webrepl-client.git"
   },
   "author": "Murilo Polese <murilopolese@gmail.com>",
-  "license": "WTFPL",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/murilopolese/webrepl-client/issues"
   },
