--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MicroPython's WebREPL Client",
   "main": "webrepl.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha",
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/murilopolese/webrepl-client/issues"
   },
-  "homepage": "https://github.com/murilopolese/webrepl-client#readme"
+  "homepage": "https://github.com/murilopolese/webrepl-client#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "simple-mock": "^0.8.0"
+  }
 }
