--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/murilopolese/webrepl-client#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "custom-elements": "^1.0.2",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "simple-mock": "^0.8.0"
